# PokerCoach

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.beads/: issues.jsonl
.claude/god-ralph/: orchestrator-state.json
cache/postflop/: dry_high_ip_3bet.json  dry_high_ip_srp.json  dry_high_oop_3bet.json  dry_high_oop_srp.json  dry_low_ip_3bet.json  dry_low_ip_srp.json  dry_low_oop_3bet.json  dry_low_oop_srp.json  dry_mid_ip_3bet.json  dry_mid_ip_srp.json  dry_mid_oop_3bet.json  dry_mid_oop_srp.json  mono_high_ip_3bet.json  mono_high_ip_srp.json  mono_high_oop_3bet.json  mono_high_oop_srp.json  mono_mid_ip_3bet.json  mono_mid_ip_srp.json  mono_mid_oop_3bet.json  mono_mid_oop_srp.json  paired_high_ip_3bet.json  paired_high_ip_srp.json  paired_high_oop_3bet.json  paired_high_oop_srp.json  paired_low_ip_3bet.json  paired_low_ip_srp.json  paired_low_oop_3bet.json  paired_low_oop_srp.json  wet_broadway_ip_3bet.json  wet_broadway_ip_srp.json  wet_broadway_oop_3bet.json  wet_broadway_oop_srp.json  wet_connected_ip_3bet.json  wet_connected_ip_srp.json  wet_connected_oop_3bet.json  wet_connected_oop_srp.json  wet_two_tone_ip_3bet.json  wet_two_tone_ip_srp.json  wet_two_tone_oop_3bet.json  wet_two_tone_oop_srp.json
cache/preflop/: 3bet_bb_vs_btn.json  rfi_btn.json  rfi_co.json  rfi_hj.json  rfi_sb.json  rfi_utg.json  squeeze_bb.json
docs/: ARCHITECTURE.md
frontend/: jest.config.js  package.json  tsconfig.json
frontend/src/components/: CoachingWindow.tsx  DecisionTimeline.tsx  (+2 more)
scripts/: build_solver.sh  precompute_postflop.py  precompute_preflop.py
src/pokercoach/: __init__.py  cli.py
tests/: __init__.py
tests/integration/: test_api.py  test_coach.py  test_import.py  test_live_advice.py  test_live_tracking.py  test_solver_cache.py  test_solver_e2e.py  test_vision_capture.py  test_websocket.py
tests/unit/: test_exploiter.py  test_game_state.py  test_hand_repository.py  test_opponent_stats.py  test_precomputed_solver.py  test_texas_solver.py  test_web_routes.py
thoughts/beads/: INDEX.md  README.md
(+50 files in other folders)
